--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
 			}
 		</style>
 	</div>
-	<div class="d1"><img src="生日快乐.png"  height="100%" width="100%"/></div>
+	<div class="d1"><img src="生日快乐.jpg"  height="100%" width="100%"/></div>
 	<audio src="mix_2m00s (audio-joiner.com).mp3" autoplay loop></audio><!--背景图片与插入音乐-->
 
 <div id="blog-news">
