--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
 		</style>
 	</div>
 	<div class="d1"><img src="1638454791671.jpeg"  height="100%" width="100%"/></div>
-	<audio src="music.mp3" autoplay="autoplay"></audio><!--背景图片与插入音乐-->
+	<audio controls="controls" src="music.mp3" autoplay="autoplay"></audio><!--背景图片与插入音乐-->
 
 <div id="blog-news">
 <div style="display: none" id="__document_write_ajax_div-1"></div>
