--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
 			}
 		</style>
 	</div>
-	<div class="d1"><img src="1638454791671.jpeg"  height="100%" width="100%"/></div>
+	<div class="d1"><img src="123.jpg"  height="100%" width="100%"/></div>
 	<audio controls="controls" src="music.mp3" autoplay="autoplay"></audio><!--背景图片与插入音乐-->
 
 <div id="blog-news">
